--- a/booking_app_node/public/addSchedule.html
+++ b/booking_app_node/public/addSchedule.html
@@ -5,6 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Add Schedules</title>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+<!-- Handlebars templates -->
+    <script id="staticTemplate" type="text/x-handlebars-template">
+      <form action="" method="" id="schedulesForm_{{count}}" data-id="form">
+        <div id="staffFormInputs_{{count}}">
+          <div>
+            <div name="staffNames" id="staffNames_{{count}}" class="dropdown">
+              Staff Member:
+            </div>
+          </div>
+          <div>
+            <div name="staffDates" id="staffDates_{{count}}" class="dropdown">
+              Date:
+          </div>
+          </div>
+          <div>
+            <div name="staffTime" id="staffTime_{{count}}" class="dropdown">
+              Time:
+          </div>
+          </div>
+        </div>
+      </form>
+    </script>
+
+    <script id="dynamicSchedulingTemplate" type="text/x-handlebars-template">
+
+        {{#each this}}
+          <div value="{{this.id}}" id="{{this.id}}" class="divDropdown">{{this.name}}</div>
+        {{/each}}
+      
+    </script>
+
+    <script id="dynamicDateTemplate" type="text/x-handlebars-template">
+      {{#if this}}
+        {{#each this}}
+          <div value="{{this.date}}" id="{{this.id}}" class="divDropdown">{{this.date}}</div>
+        {{/each}}
+      {{else}}
+          <div class="divDropdown" id="-90">No dates available for this staff member</div>
+      {{/if}}  
+    </script>
+
+    <script id="dynamicTimeTemplate" type="text/x-handlebars-template">
+      {{#if this}}
+        {{#each this}}
+          <option value="{{this.time}}" id="{{this.id}}" class="divDropdown">{{this.time}}</option>
+        {{/each}}
+      {{else}}
+          <div class="divDropdown" id="-90">No times available for this staff member</div>
+      {{/if}}
+    </script>
+
   </head>
   <body>
     <header>
@@ -12,56 +64,8 @@
     </header>
     <main id="main">
     <button id="newSchedule" >Add more schedules</button>
-
-    <script id="schedulingTemplate" type="text/x-handlebars-template">
-      <form action="/api/schedules" method="post" id="schedulesForm_{{count}}">
-        <div id="staffFormInputs">
-          <div>
-            <label for="staffNames">Staff name:</label>
-            <select name="staffNames" id="staffNames">
-              <option value="Staff Member" id="0">Staff Member</option>
-              {{#each data}}
-                {{> staffDropdownPartial}}
-              {{/each}}
-            </select>
-          </div>
-          <div>
-            <label for="date">Date:</label>
-            <select name="staffDates" id="staffDates">
-              <option value="Date" id="0">Date</option>
-              {{#each data}}
-                {{> staffDatesPartial}}
-              {{/each}}
-            </select>
-          </div>
-          <div>
-            <label for="time">Time:</label>
-            <select name="staffDates" id="staffDates">
-              <option value="Time" id="0">Time</option>
-              {{#each data}}
-                {{> staffDatesPartial}}
-              {{/each}}
-            </select>
-          </div>
-        </div>
-      </form>
-    </script>
     <button id="scheduleSubmit" >Submit</button>
 
-    <script id="staffDropdownPartial" type="text/x-handlebars-template">
-        <option value="{{this.name}}" id="{{this.id}}">{{this.name}}</option>
-    </script>
-
-    <script id="staffDatePartial" type="text/x-handlebars-template">
-        <option value="{{this.date}}" id="{{this.staff_id}}">{{this.date}}</option>
-    </script>
-
-    <script id="staffTimePartial" type="text/x-handlebars-template">
-        <option value="{{this.time}}" id="{{this.staff_id}}">{{this.time}}</option>
-    </script>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="/javascripts/addSchedule.js"></script>
   </body>
 </html>
