--- a/booking_app_node/public/cancelations.html
+++ b/booking_app_node/public/cancelations.html
@@ -3,24 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      li {
+        list-style-type: none;
+      }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <script id="bookedSchedulesTemplate" type="text/x-handlebars-template">
+      <h1>Booked Student Appointments:</h1>
+      {{#if this}}
+        {{#each this}}
+          <ul id="{{this}}"><strong>{{this}}</strong>
+            <li><a href="#" class="studentCancel">Student cancel?</a></li>
+          </ul>
+        {{/each}}
+      {{else}}<p><strong>No schedules booked!</strong></p>
+      {{/if}}
+    </script>
+
+    <script id="studentBookingsTemplate" type="text/x-handlebars-template">
       {{#each this}}
-        <ul id="{{this}}"><strong>{{this}}</strong>
-          <li><a href="#" class="staffCancel">Staff requests cancelation?</a></li>
-          <li><a href="#" class="studentCancel">Student requests cancelation?</a></li>
+        <h1>Cancel booking on {{date}}</h1>
+        <ul>
+          <li id="email">Student email: {{student_email}}</li>
+          <li id="time">Appointment time: {{time}}</li>
         </ul>
+        <form id="student_cancel">
+          <input type="submit" value="Cancel booking?" />
+        </form>
       {{/each}}
     </script>
+
+    <script id="staffSchedulesTemplate" type="text/x-handlebars-template">
+      <h1>Staff Booking Schedules:</h1>
+      {{#if this}}
+        {{#each this}}
+          <ul class="staff_id"><strong>Staff number: {{staff_id}}</strong>
+            <li class="date">{{date}}</li>
+            <li class="time">{{time}}</li>
+            {{#if student_email}}
+              <li
+                class="warning"
+                style="color: darkred; font-weight: bold;"
+              >Note: Student has not canceled previously-booked appointment:
+                {{student_email}}</li>
+            {{/if}}
+            <li><a href="#" class="staffCancel">Staff cancel?</a></li>
+          </ul>
+        {{/each}}
+      {{else}}<p><strong>No schedules booked!</strong></p>
+      {{/if}}
+    </script>
+
+    <script
+      id="staffBookingsTemplate"
+      type="text/x-handlebars-template"
+    ></script>
 
     <title>Cancelations</title>
   </head>
   <body>
-    <main>
-      <h1>Booked Schedules</h1>
-    </main>
+    <main></main>
     <script src="javascripts/cancelations.js"></script>
   </body>
 </html>
