--- a/scratchpad.html
+++ b/scratchpad.html
@@ -6,5 +6,35 @@
     <script src="scratchpad.js"></script>
     <title>Bold Element + Custom</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li class="list list-group">
+        Fruits
+        <ul>
+          <li class="list list-item">Oranges</li>
+          <li class="list list-item">Apples</li>
+        </ul>
+      </li>
+      <li class="list list-group">
+        Vegetables
+        <ul>
+          <li class="list list-tag">
+            Root
+            <ul>
+              <li class="list list-item">Potatoes</li>
+              <li class="list list-item">Carrots</li>
+              <li class="list list-tag">
+                Herbs
+                <ul>
+                  <li class="list list-item">Cilantro</li>
+                  <li class="list list-item">Parsley</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class="list list-item">Lettuce</li>
+        </ul>
+      </li>
+    </ul>
+  </body>
 </html>
